# study_note

./: .gitignore  CMakeLists.txt  README.md
boost/: CMakeLists.txt  near_point.cpp  near_point_class.cpp
cpp/: CMakeLists.txt
cpp/algorithm/: LRU.cpp  bitMap.cpp  three sum.cpp  three_sum.cpp
cpp/base/: atoi.cpp  big_small_endian.cpp  char超出范围的数组.cpp  const.cpp  dynamic_cast.cpp  operator_equal.cpp  static_cast.cpp  virtual.cpp  virtual_class_1.cpp  virtual_inherit.cpp
cpp/bit/: bit_test_temp1.cpp
cpp/boost/: CMakeLists.txt  boost_rtree.cpp  near_point.cpp  near_point_class.cpp
cpp/cast/: const_cast.cpp
cpp/class/: class_copy.cpp
cpp/design_pattern/: CMakeLists.txt  Composite.cpp  Flyweight.cpp  Singleton.cpp  Singleton_hungry.cpp  Singleton_lazy.cpp  decorator_pattern.cpp  facade.cpp  singelton.cpp  singelton_safe.cpp  singleton_lazy_safty.cpp  static_factory.cpp  temp.cpp  template_method.cpp
cpp/dynamic_programming/: dp_bag1.cpp  longgestSubSequence.cpp
cpp/leetcode/: LRU.cpp  leetcode_189.cpp
cpp/link/: list_test.cpp  mmap.cpp  revertLink.cpp  w2.cpp
cpp/linux/: LRU.cpp  LRU_2.cpp  LRU_template.cpp  io_select.cpp  mmap.cpp
cpp/math/: bitCal.cpp  co-occurrence_matrix.cpp  three_point_angle.cpp  提取共现矩阵.cpp
cpp/memory/: MemPool.cpp  copy_on_write.cpp  memory_alignment.cpp
cpp/old/: main.cpp  main.h  myString.cpp  virtual.cpp
cpp/old/OO/: CMakeLists.txt
cpp/old/bag/: CMakeLists.txt
cpp/old/base/: CMakeLists.txt  bst.cpp  extren_c.cpp  main.cpp  nullptr.cpp  test.h  test1.h  tuplu_paras.cpp
cpp/old/blog/: CMakeLists.txt  shu_chuang.cpp  tuplu_paras.cpp  virtual.cpp
cpp/old/blog/const_static_in_.h/: CMakeLists.txt  T1.cpp  T1.h  T2.cpp  T2.h  h2.h  header.h  temp.cpp
cpp/old/cast/: CMakeLists.txt
cpp/old/copy/: CMakeLists.txt
cpp/old/fork/: CMakeLists.txt  fork.cpp  gard_process.cpp
cpp/old/i++and++i/: CMakeLists.txt  i++and++i.cpp
cpp/old/leetcode/: CMakeLists.txt
cpp/old/linux/: CMakeLists.txt  LRU.cpp  ipc_pipe.cpp  makefile
cpp/old/math/: CMakeLists.txt  sqrt.cpp
cpp/old/memory/: CMakeLists.txt  MemPool2.cpp  MemPool3.cpp
cpp/old/move/: CMakeLists.txt
cpp/old/net/: client.cpp  makefile
cpp/old/net/epoll/: CMakeLists.txt  epoll_file.cpp
cpp/old/net/raw_demo_read/: CMakeLists.txt  main.cpp
cpp/old/other/: CMakeLists.txt  big_small_endian.cpp
cpp/old/pattern/: CMakeLists.txt  Factory_Method.cpp  ProductFactory.cpp  Singleton_safe.cpp
cpp/old/process/: CMakeLists.txt  orphan.cpp  w1.cpp
cpp/old/smart_ptr/: CMakeLists.txt  makefile  shared_ptr.cpp  weak_ptr_usage.cpp
cpp/old/socket/: CMakeLists.txt  makefile  server.cpp
cpp/old/socket/select/: CMakeLists.txt  client.cpp  makefile  sever.cpp
cpp/old/socket/tcp/: CMakeLists.txt  makefile  server.cpp
cpp/old/sort/: CMakeLists.txt  insertSort.cpp  nullptr.cpp  sort.cpp
cpp/old/stl/: CMakeLists.txt  erase.cpp  func.cpp  lose_iter_map.cpp  lose_iter_vec.cpp  main.cpp  myHash.cpp  queue.cpp  safeQueue.cpp  size_of.cpp  stl_delete_ele.cpp  stl_hash_test.cpp
cpp/old/stl/avl/: CMakeLists.txt
cpp/old/string/: CMakeLists.txt  itoa.cpp  memset.cpp  strcat.cpp  strcmp.cpp  strlen.cpp  temp.cpp
cpp/old/temp/: CMakeLists.txt  temp.cpp
cpp/old/thread/: CMakeLists.txt  c_thread.cpp  conditionVariable.cpp  eat_think.cpp  print_c.cpp  只有四个哲学家吃饭.cpp
cpp/old/thread/Interview/: CMakeLists.txt
cpp/old/thread/threadPool_2/: CMakeLists.txt  ThreadPool.h
cpp/old/virtual/: CMakeLists.txt  tool.cpp
cpp/oop/: c_oop.c  c_oop.cpp
cpp/search/: CMakeLists.txt  binarySearch.cpp
cpp/socket/: epoll.cpp  row_client.cpp  sever.cpp  tcp_1_client.cpp
cpp/sort/: CMakeLists.txt  bubleSort.cpp  countSort.cpp  heapSort.cpp  heapSort2.cpp  heapSort_3.cpp  insertSort.cpp  mergeSort.cpp  optimize_QSort.cpp  quickSort.cpp  quickSort2.cpp  quick_sort.cpp  selectSort.cpp  shellSort.cpp
cpp/stl/: all_cast.cpp  cast.cpp  enable_shared_from_this.cpp  enable_shared_from_this_2.cpp  forward.cpp  hardware_concurrency.cpp  leak.cpp  leak2.cpp  shared_ptr.cpp  shared_ptr_this.cpp  smartpointer.h  smartpointer1.cpp  smartpointer2.cpp  std  ref.cpp  std_move.cpp  tuple_mutli_return.cpp  unordered_map.cpp  vector.cpp  weak_ptr_usage.cpp
cpp/string/: CMakeLists.txt  itoa.cpp  kmp.cpp  kmp_2.cpp  memcpy.cpp  myString.h  reverseSentence.cpp  reverstWord.cpp  strcpy.cpp  strcpy_2.cpp  string_class.cpp  string_row_match.cpp  write_a_word.cpp
cpp/temp/: temp_1.cpp
cpp/thread/: CMakeLists.txt  Daemon.cpp  Mymutex.cpp  ThreadPool.cpp  four_philosopher.cpp  print.cpp  print_1.cpp  print_a_b.cpp  print_abc.cpp  producer_and_consumer.cpp  temp.cpp
cpp/time/: C++计算时间差.cpp
cpp/tree/: CMakeLists.txt  Postorder .cpp  avl2.cpp  avl_3.hpp  avl_3_main.cpp  bst.cpp  inorder.cpp  is_after_order.cpp  level_traver.cpp  rbTree.cpp  二叉树按层构建.cpp
cpp/tree/avl/: avl.cpp  avl.h
lua/install_lua/: CMakeLists.txt
lua/install_lua/src/: CMakeLists.txt
py/pybind/: main.cpp  (+1 more)
(+96 files in other folders)
