cmake_minimum_required(VERSION 3.0)
project(temp)
add_definitions(-std=c++11)
include_directories(./)
#add_executable(temp kmp.cpp)
#add_executable(strcpy strcpy.cpp)
#add_executable(copy1 extren_c.cpp)
#add_executable(copy1 LRU.cpp)
#add_executable(copy1 const_obj.cpp)
add_executable(copy1 const.cpp)
#add_executable(copy1 nullptr.cpp)


