cmake_minimum_required(VERSION 3.0)
project(main)
#add_compile_options(-std=c++11)
add_compile_options(-std=c++11)
#add_executable(main shellSort.cpp)
#add_executable(main vector.cpp)
#add_executable(main heapSort.cpp)
#add_executable(main mergeSort.cpp)
#add_executable(main main.cpp func.cpp)
#add_executable(main stl_delete_ele.cpp)
#add_executable(main unordered_map.cpp)
#add_executable(main erase.cpp)
#add_executable(main lose_iter_map.cpp)
#add_executable(main lose_iter_vec.cpp)
#add_executable(main myHash.cpp)
#add_executable(main stl_hash_test.cpp)
#add_executable(main forward.cpp)
add_executable(main safeQueue.cpp)
